--- a/templates/index.html
+++ b/templates/index.html
@@ -123,7 +123,7 @@
     <header id="top">
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Find The Activities That Suit You Best</h1>
+                <h1 id="homeHeading">Discover The Activities That Suit You Best</h1>
                 <hr>
                 <p>A website that uses <b>genetic algorithms</b> to create a day-long vacation schedule tailored to your own interests.</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
@@ -138,12 +138,12 @@
                     <h2 class="section-heading">How it works</h2>
                     <hr class="light">
                     <p class="text-faded">Enter your current city as well as a list of your personal interests. Then, our genetic algorithm will automatically create you a unique schedule for the day.</p>
-                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
+                    <a href="#form" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
                 </div>
             </div>
         </div>
     </section>
-    <section>
+    <section id = "form">
         <div class = "container">
             <div class = "col-md-6 col-md-offset-3">
                 <div class = "well">
